# exercism.com-ocaml

./: dune-project  sandpit2.opam
lib/: acronym.ml  acronym.mli  af_example.ml  all_your_bases.ml  allergies.ml  anagram.ml  beer_song.ml  binary_search.ml  binary_search_tree.ml  bob.ml  dune  etl.ml  grade_school.ml  hamming.ml  luhn.ml  luhn.mli  matching_brackets.ml  matching_brackets.mli  nucleotide_count.ml  pangram.ml  phone_number.ml  sieve.ml  sieve.mli  word_count.ml
test/: dune  test_acronym.ml  test_all_your_bases.ml  test_allergies.ml  test_anagram.ml  test_beer_song.ml  test_binary_search.ml  test_binary_search_tree.ml  test_bob.ml  test_etl.ml  test_grade_school.ml  test_luhn.ml  test_matching_brackets.ml  test_nucleotide_count.ml  test_pangram.ml  test_phone_number.ml  test_sandpit2.ml  test_sieve.ml  test_word_count.ml
